--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = ">=3.10,<3.12"
 numpy = "^1.24.3"
 scipy = "^1.10.1"
+pyfftw = "^0.13.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
